--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Movie finder</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div class="full_body">
@@ -19,5 +19,5 @@
 	
 </div>
 </body>
-<script src="../javascript/javascript.js"></script>
+<script src="javascript.js"></script>
 </html>
